Revert "Changed xrbengine to xrbengine2"
This reverts commit c3de8664c3475b50591e0fde03678bbc409d55b6.

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ publishing {
     publications {
         maven(MavenPublication) {
             groupId = "com.xrbpowered"
-            artifactId = "xrbengine2"
+            artifactId = "xrbengine"
             version = project.version
 
             from components.java
